<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memo</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game">Memo</string>
    <string name="title_menu_difficulty_easy">Easy</string>
    <string name="title_menu_difficulty_normal">Challenge</string>
    <string name="title_activity_game_settings">GameSettingsActivity</string>
    <string name="title_activity_scores">Scores</string>
    <string name="title_activity_info">Info</string>
    <string name="title_action_share">Share</string>
    <string name="title_score_share">Share</string>
    <string name="title_action_scores">Scores</string>
    <string name="title_action_order">Customize</string>
    <string name="title_action_info">Info</string>
    <string name="app_quit">Quit Memo?</string>
    <string name="score_easy">Latest scores in: Easy</string>
    <string name="score_chal">Latest scores in: Challenge</string>
    <string name="properties_about">Built with passion. \n We would appreciate the feedback! \n Visit us at: <a href="www.tgn-ib.com">www.tgn-ib.com</a></string>
    <string name="properties_resources">All used images are own photos.</string>
    <string name="properties_copyright">\@ 2013 All rights reserved \n Toth-Gati Norbert Ingenieurbuero</string>
    <string name="title_activity_bitmap">Customize Memo</string>
    <string name="send_order">Order now</string>
    <string name="order_content">Order your Memo now</string>
    <string name="order_content_details">You have the possibility to get a personalized Memory Game with the images you want. You can order an application and surprise somebody with it. Just get in touch!\n\n Download from Google Play Store.</string>

</resources>