<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_item_difficulty_easy"
        android:showAsAction="ifRoom|withText"
        android:title="@string/title_menu_difficulty_easy">
    </item>
    <item
        android:id="@+id/menu_item_difficulty_normal"
        android:showAsAction="ifRoom|withText"
        android:title="@string/title_menu_difficulty_normal">
    </item>
    <item android:id="@+id/menu_item_share"
        android:showAsAction="ifRoom|withText"
        android:title="@string/title_action_share"
        android:actionProviderClass="android.widget.ShareActionProvider" />
    <item
        android:id="@+id/menu_item_scores"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_action_scores"/>
   <!--  <item
        android:id="@+id/menu_item_order"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_action_order"/> -->
    <item
        android:id="@+id/menu_item_info"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="ifRoom"
        android:title="@string/title_action_info"/>
    

</menu>