<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:background="@color/white"
            android:clickable="false"
            android:linksClickable="true"
            android:longClickable="false"
            android:text="@string/properties_about"
            android:textColor="@color/background_main" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="294dp"
            android:background="@color/white"
            android:clickable="false"
            android:drawableTop="@drawable/back_card"
            android:focusable="false"
            android:longClickable="false"
            android:textColor="@color/background_main" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:background="@color/white"
            android:longClickable="false"
            android:text="@string/properties_resources"
            android:textColor="@color/background_main" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/end_blue"
            android:clickable="false"
            android:focusable="false"
            android:longClickable="false"
            android:text="@string/properties_copyright"
            android:textColor="@color/background_main" />
    </LinearLayout>

</ScrollView>